chore: java options as multilines and jenkins-infra-team mail

--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -43,9 +43,17 @@ controller:
     supplementalGroups: [1000]
   overwritePlugins: true
   serviceType: "ClusterIP"
-  javaOpts: >
-    -XshowSettings:vm -XX:+UseStringDeduplication -XX:+ParallelRefProcEnabled -XX:+DisableExplicitGC -XX:MaxRAM=4g -XX:+AlwaysPreTouch -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/ -XX:+UseG1GC -Dorg.csanchez.jenkins.plugins.kubernetes.pipeline.ContainerExecDecorator.websocketConnectionTimeout=60
-
+  javaOpts: >-
+    -XshowSettings:vm
+    -XX:+UseStringDeduplication
+    -XX:+ParallelRefProcEnabled
+    -XX:+DisableExplicitGC
+    -XX:MaxRAM=4g
+    -XX:+AlwaysPreTouch
+    -XX:+HeapDumpOnOutOfMemoryError
+    -XX:HeapDumpPath=/tmp/
+    -XX:+UseG1GC
+    -Dorg.csanchez.jenkins.plugins.kubernetes.pipeline.ContainerExecDecorator.websocketConnectionTimeout=60
   JCasC:
     enabled: true
     defaultConfig: false
@@ -297,7 +305,7 @@ controller:
           acceptToS: true
           ccs:
           - "damien.duportal@gmail.com"
-          email: "jenkins@oblak.com"
+          email: "jenkins-infra-team@googlegroups.com"
           excludedComponents:
             - "ItemsContent"
             - "GCLogs"
