--- a/config/ext_jenkins-infra-jobs.yaml
+++ b/config/ext_jenkins-infra-jobs.yaml
@@ -45,10 +45,10 @@ jobsDefinition:
       packer-images:
         name: Packer Images
         credentials:
-          packer-aws-access-key-id:
+          packer-aws-access-key-id: &packer-aws-access-key-id-def
             description: AWS API key for the account ci-packer
             secret: "${CI_PACKER_AWS_ACCESS_KEY_ID}"
-          packer-aws-secret-access-key:
+          packer-aws-secret-access-key: &packer-aws-secret-access-key-def
             description: AWS Secret key for the account ci-packer
             secret: "${CI_PACKER_AWS_SECRET_ACCESS_KEY}"
           packer-azure-serviceprincipal:
@@ -79,13 +79,9 @@ jobsDefinition:
             secret: "${SOPS_TENANT_ID}"
             description: Azure tenant id used by sops to decrypt secrets
           # Used by updatecli to retrieve AMIs
-          packer-aws-access-key-id:
-            description: AWS API key for the account ci-packer
-            secret: "${CI_PACKER_AWS_ACCESS_KEY_ID}"
+          packer-aws-access-key-id: *packer-aws-access-key-id-def
           # Used by updatecli to retrieve AMIs
-          packer-aws-secret-access-key:
-            description: AWS Secret key for the account ci-packer
-            secret: "${CI_PACKER_AWS_SECRET_ACCESS_KEY}"
+          packer-aws-secret-access-key: *packer-aws-secret-access-key-def
           production-terraform-digitalocean-pat:
             secret: "${PRODUCTION_TERRAFORM_DIGITALOCEAN_PAT}"
             description: "Digital Ocean PAT for production"
@@ -143,7 +139,7 @@ jobsDefinition:
         repository: "infra-reports"
         jenkinsfilePath: "fork-report/Jenkinsfile"
         credentials:
-          jenkins-infra-reports:
+          jenkins-infra-reports: &jenkins-infra-reports-def
             description: "Github App installed on jenkinsci org for https://github.com/jenkins-infra/infra-reports scripts"
             appId: "${GITHUB_APP_JENKINSCI_INFRA_REPORTS_ID}"
             owner: "jenkinsci"
@@ -173,11 +169,7 @@ jobsDefinition:
         repository: "infra-reports"
         jenkinsfilePath: "permissions-report/Jenkinsfile"
         credentials:
-          jenkins-infra-reports:
-            description: "Github App installed on jenkinsci org for https://github.com/jenkins-infra/infra-reports scripts"
-            appID: "${GITHUB_APP_JENKINSCI_INFRA_REPORTS_ID}"
-            owner: "jenkinsci"
-            privateKey: "${GITHUB_APP_JENKINSCI_INFRA_REPORTS_PRIVATE_KEY}"
+          jenkins-infra-reports: *jenkins-infra-reports-def
   terraform-jobs:
     name: Terraform Jobs
     description: Folder hosting all the Terraform-related jobs
