fix: correct field name for pipeline credential

--- a/config/ext_jenkins-weekly.yaml
+++ b/config/ext_jenkins-weekly.yaml
@@ -99,7 +99,7 @@ controller:
                 modernSCM:
                   scm:
                     git:
-                      id: "github-app-weekly"
+                      credentialsId: "github-app-weekly"
                       remote: "https://github.com/jenkins-infra/pipeline-library.git"
       matrix-settings: |
         jenkins:
