fix(weekly.ci.jenkins.io) Finish bootstrap + fix pipeline-library credz (#2183)
* fix: set fsGroup & fsGroupChangePolicy

Fixes "/var/jenkins_config/apply_config.sh: cannot create /var/jenkins_home/jenkins.install.UpgradeWizard.state: Permission denied"

From https://github.com/jenkinsci/helm-charts/issues/210\#issuecomment-916217915

Part of https://github.com/jenkins-infra/helpdesk/issues/2855

* fix: public-nginx-ingress

* fix: remove problematic settings

* fix: remove boostrap conf

* fix: correct field name for pipeline credential

* chore: system message

* Update config/ext_jenkins-weekly.yaml

* Update config/ext_jenkins-weekly.yaml

--- a/config/ext_jenkins-weekly.yaml
+++ b/config/ext_jenkins-weekly.yaml
@@ -17,6 +17,7 @@ networkPolicy:
     allowed: true
     namespaceLabels:
       name: "jenkins-weekly"
+systemMessage: "Don't miss the <b>new Design Library</b> here: https://weekly.ci.jenkins.io/design-library"
 controller:
   image: jenkinsciinfra/jenkins-weekly
   tag: 0.52.0-2.342
@@ -28,7 +29,6 @@ controller:
     requests:
       cpu: "2"
       memory: "4Gi"
-  healthProbes: false
   probes:
     startupProbe:
       initialDelaySeconds: 120
@@ -100,7 +100,7 @@ controller:
                 modernSCM:
                   scm:
                     git:
-                      id: "github-app-weekly"
+                      credentialsId: "github-app-weekly"
                       remote: "https://github.com/jenkins-infra/pipeline-library.git"
       matrix-settings: |
         jenkins:
@@ -138,7 +138,7 @@ controller:
     annotations:
       "cert-manager.io/cluster-issuer": "letsencrypt-prod"
       "nginx.ingress.kubernetes.io/proxy-body-size": "500m"
-    ingressClassName: private-nginx
+    ingressClassName: public-nginx
     tls:
       - hosts:
           - weekly.ci.jenkins.io
