fix: use correct field name for pipeline library git credentials

--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -318,7 +318,7 @@ controller:
                 modernSCM:
                   scm:
                     git:
-                      id: "github-app-infra"
+                      credentialsId: "github-app-infra"
                       remote: "https://github.com/jenkins-infra/pipeline-library.git"
       matrix-settings: |
         jenkins:
