fix: use new 'files' property of updatecli targets
Since the [release of updatecli version 0.23](https://github.com/updatecli/updatecli/releases/tag/v0.23.0), we can now [specify more than one file as target of version upgrade](https://github.com/updatecli/updatecli/issues/435)

--- a/updatecli/updatecli.d/charts/jenkins.yaml
+++ b/updatecli/updatecli.d/charts/jenkins.yaml
@@ -20,19 +20,13 @@ sources:
       name: jenkins
 
 targets:
-  updateReleaseAndWeeklyCIChartVersion:
+  updateChartVersion:
     name: "jenkinsci/jenkins Helm Chart"
     kind: file
     spec:
-      file: clusters/prodpublick8s.yaml
-      matchPattern: 'chart: jenkins\/jenkins((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: jenkins/jenkins${1}version: {{ source `lastChartVersion` }}'
-    scmid: default
-  updateInfraCIChartVersion:
-    name: "jenkinsci/jenkins Helm Chart"
-    kind: file
-    spec:
-      file: clusters/temp-privatek8s.yaml
+      files:
+      - clusters/prodpublick8s.yaml
+      - clusters/temp-privatek8s.yaml
       matchPattern: 'chart: jenkins\/jenkins((\r\n|\r|\n)(\s+))version: .*'
       replacePattern: 'chart: jenkins/jenkins${1}version: {{ source `lastChartVersion` }}'
     scmid: default
@@ -42,8 +36,7 @@ pullrequests:
     kind: github
     scmid: default
     targets:
-      - updateReleaseAndWeeklyCIChartVersion
-      - updateInfraCIChartVersion
+      - updateChartVersion
     spec:
       labels:
         - dependencies
