--- a/updatecli/updatecli.d/charts/nginx-ingress.yaml
+++ b/updatecli/updatecli.d/charts/nginx-ingress.yaml
@@ -21,19 +21,13 @@ sources:
       name: ingress-nginx
 
 targets:
-  updateChartVersionPublic:
-    name: "Update the version of the Helm chart ingress-nginx for public-ingress"
+  updateChartVersion:
+    name: "Update the version of the Helm chart ingress-nginx"
     kind: file
     spec:
-      file: clusters/prodpublick8s.yaml
-      matchPattern: 'chart: ingress-nginx\/ingress-nginx((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: ingress-nginx/ingress-nginx${1}version: {{ source `lastChartVersion` }}'
-    scmid: default
-  updateChartVersionPrivate:
-    name: "Update the version of the Helm chart ingress-nginx for temp-privatek8s"
-    kind: file
-    spec:
-      file: clusters/temp-privatek8s.yaml
+      files:
+      - clusters/prodpublick8s.yaml
+      - clusters/temp-privatek8s.yaml
       matchPattern: 'chart: ingress-nginx\/ingress-nginx((\r\n|\r|\n)(\s+))version: .*'
       replacePattern: 'chart: ingress-nginx/ingress-nginx${1}version: {{ source `lastChartVersion` }}'
     scmid: default
@@ -43,9 +37,8 @@ pullrequests:
     kind: github
     scmid: default
     targets:
-      - updateChartVersionPublic
-      - updateChartVersionPrivate
+      - updateChartVersion
     spec:
       labels:
         - dependencies
-        - nginx
+        - nginx-ingress
