fix: use new 'files' property of updatecli targets
Since the [release of updatecli version 0.23](https://github.com/updatecli/updatecli/releases/tag/v0.23.0), we can now [specify more than one file as target of version upgrade](https://github.com/updatecli/updatecli/issues/435)

--- a/updatecli/updatecli.d/charts/jenkins-kubernetes-agent.yaml
+++ b/updatecli/updatecli.d/charts/jenkins-kubernetes-agent.yaml
@@ -1,4 +1,4 @@
-title: "Bump Jenkins Kubernetes Agents Helm Chart Version"
+title: "Bump jenkins-kubernetes-agents Helm Chart Version"
 
 scms:
   default:
@@ -20,19 +20,13 @@ sources:
       name: jenkins-kubernetes-agents
 
 targets:
-  updateCik8sChartVersion:
+  updateChartVersion:
     name: "Update the chart version for jenkins kubernetes agent"
     kind: file
     spec:
-      file: clusters/cik8s.yaml
-      matchPattern: 'chart: jenkins-infra\/jenkins-kubernetes-agents((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: jenkins-infra/jenkins-kubernetes-agents${1}version: {{ source `lastChartVersion` }}'
-    scmID: default
-  updateDoksChartVersion:
-    name: "Update the chart version for jenkins kubernetes agent"
-    kind: file
-    spec:
-      file: clusters/doks.yaml
+      files:
+      - clusters/cik8s.yaml
+      - clusters/doks.yaml
       matchPattern: 'chart: jenkins-infra\/jenkins-kubernetes-agents((\r\n|\r|\n)(\s+))version: .*'
       replacePattern: 'chart: jenkins-infra/jenkins-kubernetes-agents${1}version: {{ source `lastChartVersion` }}'
     scmID: default
@@ -42,8 +36,7 @@ pullrequests:
     kind: github
     scmID: default
     targets:
-      - updateCik8sChartVersion
-      - updateDoksChartVersion
+      - updateChartVersion
     spec:
       labels:
         - dependencies
