--- a/updatecli/updatecli.d/charts/cert-manager.yaml
+++ b/updatecli/updatecli.d/charts/cert-manager.yaml
@@ -20,19 +20,13 @@ sources:
       name: cert-manager
 
 targets:
-  updateChartVersionPublic:
+  updateChartVersion:
     name: "jetstack/cert-manager Helm Chart"
     kind: file
     spec:
-      file: clusters/prodpublick8s.yaml
-      matchPattern: 'chart: jetstack\/cert-manager((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: jetstack/cert-manager${1}version: {{ source `lastChartVersion` }}'
-    scmID: default
-  updateChartVersionPrivate:
-    name: "jetstack/cert-manager Helm Chart"
-    kind: file
-    spec:
-      file: clusters/temp-privatek8s.yaml
+      files:
+      - clusters/prodpublick8s.yaml
+      - clusters/temp-privatek8s.yaml
       matchPattern: 'chart: jetstack\/cert-manager((\r\n|\r|\n)(\s+))version: .*'
       replacePattern: 'chart: jetstack/cert-manager${1}version: {{ source `lastChartVersion` }}'
     scmID: default
@@ -42,9 +36,8 @@ pullrequests:
     kind: github
     scmID: default
     targets:
-      - updateChartVersionPublic
-      - updateChartVersionPrivate
+      - updateChartVersion
     spec:
       labels:
         - dependencies
-        - certmanager
+        - cert-manager
