--- a/updatecli/updatecli.d/charts/datadog.yaml
+++ b/updatecli/updatecli.d/charts/datadog.yaml
@@ -20,30 +20,15 @@ sources:
       name: datadog
 
 targets:
-  updateProdpublick8s:
+  updateClusters:
     name: "Datadog Helm Chart"
     kind: file
     scmID: default
     spec:
-      file: clusters/prodpublick8s.yaml
-      matchPattern: 'chart: datadog\/datadog((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: datadog/datadog${1}version: {{ source `lastChartVersion` }}'
-
-  updateCik8s:
-    name: "Datadog Helm Chart"
-    kind: file
-    scmID: default
-    spec:
-      file: clusters/cik8s.yaml
-      matchPattern: 'chart: datadog\/datadog((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: datadog/datadog${1}version: {{ source `lastChartVersion` }}'
-
-  updateDoks:
-    name: "Datadog Helm Chart"
-    kind: file
-    scmID: default
-    spec:
-      file: clusters/doks.yaml
+      files:
+      - clusters/cik8s.yaml
+      - clusters/doks.yaml
+      - clusters/prodpublick8s.yaml
       matchPattern: 'chart: datadog\/datadog((\r\n|\r|\n)(\s+))version: .*'
       replacePattern: 'chart: datadog/datadog${1}version: {{ source `lastChartVersion` }}'
 
@@ -52,9 +37,7 @@ pullrequests:
     kind: github
     scmID: default
     targets:
-      - updateProdpublick8s
-      - updateCik8s
-      - updateDoks
+      - updateClusters
     spec:
       labels:
         - dependencies
