--- a/updatecli/updatecli.d/charts/falco.yaml
+++ b/updatecli/updatecli.d/charts/falco.yaml
@@ -23,7 +23,7 @@ targets:
   updateChartVersion:
     name: "falco/falco Helm Chart"
     kind: file
-    scmID: default
+    scmid: default
     spec:
       file: clusters/prodpublick8s.yaml
       matchPattern: 'chart: falco\/falco((\r\n|\r|\n)(\s+))version: .*'
@@ -32,7 +32,7 @@ targets:
 pullrequests:
   default:
     kind: github
-    scmID: default
+    scmid: default
     targets:
       - updateChartVersion
     spec:
