--- a/updatecli/updatecli.d/docker-images/404.yaml
+++ b/updatecli/updatecli.d/docker-images/404.yaml
@@ -39,33 +39,33 @@ targets:
     spec:
       file: "config/ext_private-nginx-ingress.yaml"
       key: "defaultBackend.image.tag"
-    scmID: default
+    scmid: default
   updatePublicNginxIngress404Public:
     name: "Update 404 docker image tag"
     kind: yaml
     spec:
       file: "config/ext_public-nginx-ingress.yaml"
       key: "defaultBackend.image.tag"
-    scmID: default
+    scmid: default
   updatePrivateNginxIngress404Private:
     name: "Update 404 docker image tag"
     kind: yaml
     spec:
       file: "config/temp-privatek8s/ext_private-nginx-ingress.yaml"
       key: "defaultBackend.image.tag"
-    scmID: default
+    scmid: default
   updatePublicNginxIngress404Private:
     name: "Update 404 docker image tag"
     kind: yaml
     spec:
       file: "config/temp-privatek8s/ext_public-nginx-ingress.yaml"
       key: "defaultBackend.image.tag"
-    scmID: default
+    scmid: default
 
 pullrequests:
   default:
     kind: github
-    scmID: default
+    scmid: default
     targets:
       - updatePrivateNginxIngress404Public
       - updatePublicNginxIngress404Public
