--- a/updatecli/updatecli.d/docker-images/jenkins-weekly.yaml
+++ b/updatecli/updatecli.d/docker-images/jenkins-weekly.yaml
@@ -39,19 +39,19 @@ targets:
     spec:
       file: "config/ext_jenkins-infra.yaml"
       key: "controller.tag"
-    scmID: default
+    scmid: default
   updateReleaseInWeeklyConfig:
     name: "Update jenkinsciinfra/jenkins-weekly docker image tag"
     kind: yaml
     spec:
       file: "config/ext_jenkins-weekly.yaml"
       key: "controller.tag"
-    scmID: default
+    scmid: default
 
 pullrequests:
   default:
     kind: github
-    scmID: default
+    scmid: default
     targets:
       - updateReleaseInConfig
       - updateReleaseInWeeklyConfig
