--- a/updatecli/updatecli.d/docker-images/keycloack-theme.yaml
+++ b/updatecli/updatecli.d/docker-images/keycloack-theme.yaml
@@ -40,12 +40,12 @@ targets:
       file: config/ext_keycloak.yaml
       matchPattern: 'image: jenkinsciinfra/keycloak-theme:.*'
       replacePattern: 'image: jenkinsciinfra/keycloak-theme:{{ source `latestRelease` }}'
-    scmID: default
+    scmid: default
 
 pullrequests:
   default:
     kind: github
-    scmID: default
+    scmid: default
     targets:
       - updateReleaseInConfig
     spec:
