fix: use 'scmdid' instead of deprecated 'scmID' (#2192)
Since the release of updatecli version 0.23 (https://github.com/updatecli/updatecli/releases/tag/v0.23.0) the property 'scmID' has been deprecated in favor of 'scmid'

--- a/updatecli/updatecli.d/charts/datadog.yaml
+++ b/updatecli/updatecli.d/charts/datadog.yaml
@@ -23,7 +23,7 @@ targets:
   updateClusters:
     name: "Datadog Helm Chart"
     kind: file
-    scmID: default
+    scmid: default
     spec:
       files:
       - clusters/cik8s.yaml
@@ -35,7 +35,7 @@ targets:
 pullrequests:
   default:
     kind: github
-    scmID: default
+    scmid: default
     targets:
       - updateClusters
     spec:
