fix(infra.ci) correct required ghapp credentials for infra-reports
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/config/ext_jenkins-infra-jobs.yaml
+++ b/config/ext_jenkins-infra-jobs.yaml
@@ -145,7 +145,7 @@ jobsDefinition:
         jenkinsfilePath: "fork-report/Jenkinsfile"
         disableGitHubChecks: true ## Only build status, no more
         credentials:
-          jenkins-infra-reports: &jenkins-infra-reports-def
+          jenkins-infra-reports:
             description: "Github App installed on jenkinsci org for https://github.com/jenkins-infra/infra-reports scripts"
             appId: "${GITHUB_APP_JENKINSCI_INFRA_REPORTS_ID}"
             owner: "jenkinsci"
@@ -162,7 +162,7 @@ jobsDefinition:
             usernameSecret: true
             password: "${JIRA_API_INFRA_REPORTS_PASSWORD}"
       maintainers-info-report:
-        name: "Maintainers Jira Info"
+        name: "Maintainers Jira Infos"
         repository: "infra-reports"
         jenkinsfilePath: "maintainers-info-report/Jenkinsfile"
         disableGitHubChecks: true ## Only build status, no more
@@ -173,12 +173,17 @@ jobsDefinition:
             usernameSecret: true
             password: "${JIRA_API_INFRA_REPORTS_PASSWORD}"
       permissions-report:
-        name: "Maintainers Jira Info"
+        name: "GitHub Permissions Report"
         repository: "infra-reports"
         jenkinsfilePath: "permissions-report/Jenkinsfile"
         disableGitHubChecks: true ## Only build status, no more
         credentials:
-          jenkins-infra-reports: *jenkins-infra-reports-def
+          githubapp-jenkins-infra-reports-private-key-b64:
+            description: "Base64 encoded private key of the Github App installed on jenkinsci org for https://github.com/jenkins-infra/infra-reports scripts"
+            secret: "${GITHUB_APP_JENKINSCI_INFRA_REPORTS_PRIVATE_KEY_B64}"
+          githubapp-jenkins-infra-reports-app-identifier:
+            description: "Identifier (integer) of the Github App installed on jenkinsci org for https://github.com/jenkins-infra/infra-reports scripts"
+            secret: "${GITHUB_APP_JENKINSCI_INFRA_REPORTS_ID}"
   terraform-jobs:
     name: Terraform Jobs
     description: Folder hosting all the Terraform-related jobs
