fix(jenkinsio) enable again mùissing security headers - helpdesk#2553
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/config/jenkinsio.yaml
+++ b/config/jenkinsio.yaml
@@ -4,6 +4,9 @@ ingress:
   annotations:
     "cert-manager.io/cluster-issuer": "letsencrypt-prod"
     "nginx.ingress.kubernetes.io/ssl-redirect": "false"
+    "nginx.ingress.kubernetes.io/configuration-snippet": |
+      more_set_headers "X-Content-Type-Options: nosniff";
+      more_set_headers "X-Frame-Options: DENY";
   hosts:
     - host: jenkins.io
       paths:
