fix(infra.ci) do not includ shared libraries for pipeline triggers and changelog + add caching
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -314,6 +314,9 @@ controller:
             - defaultVersion: "master"
               implicit: true
               name: "pipeline-library"
+              includeInChangesets: false
+              cachingConfiguration:
+                refreshTimeMinutes: 180
               retriever:
                 modernSCM:
                   scm:
