--- a/updatecli/updatecli.d/charts/datadog.yaml
+++ b/updatecli/updatecli.d/charts/datadog.yaml
@@ -14,7 +14,7 @@ scms:
 
 sources:
   lastChartVersion:
-    kind: helmChart
+    kind: helmchart
     spec:
       url: https://helm.datadoghq.com
       name: datadog
