--- a/updatecli/updatecli.d/charts/incrementals-publisher.yaml
+++ b/updatecli/updatecli.d/charts/incrementals-publisher.yaml
@@ -14,7 +14,7 @@ scms:
 
 sources:
   lastChartVersion:
-    kind: helmChart
+    kind: helmchart
     spec:
       url: https://jenkins-infra.github.io/helm-charts
       name: incrementals-publisher
