feat(redirection): add jenkinsistheway.io redirection to stories.jenkins.io (#2396)
* add jenkinsistheway.io redirection to stories.jenkins.io

* Update clusters/prodpublick8s.yaml

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

* Update clusters/prodpublick8s.yaml

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>
Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

--- a/clusters/prodpublick8s.yaml
+++ b/clusters/prodpublick8s.yaml
@@ -253,3 +253,9 @@ releases:
       - "../config/rating.yaml"
     secrets:
       - "../secrets/config/rating/secrets.yaml"
+  - name: jenkinsisthewayio-redirect
+    namespace: jenkinsisthewayio-redirector
+    chart: jenkins-infra/httpredirector
+    version: 0.1.1
+    values:
+      - "../config/jenkinsisthewayio.yaml"
