fix(jenkinsistheway redirection): use new chart and add dependencie (#2399)
* add infressClassName

* add a dependance for public-nginx-ingress

* add an updatecli to bump jenkinsistheway.io redirection chart

--- a/clusters/prodpublick8s.yaml
+++ b/clusters/prodpublick8s.yaml
@@ -256,6 +256,8 @@ releases:
   - name: jenkinsisthewayio-redirect
     namespace: jenkinsisthewayio-redirector
     chart: jenkins-infra/httpredirector
-    version: 0.1.1
+    version: 0.2.0
+    needs:
+      - public-nginx-ingress/public-nginx-ingress # Required to expose both the UI and the webhooks endpoint
     values:
       - "../config/jenkinsisthewayio.yaml"
