feat: use Jenkins Infra inbound-agent Windows Docker image (#2404)
* feat: use Jenkins Infra inbound-agent Windows Docker image

Ref: https://github.com/jenkins-infra/helpdesk/issues/2873

* add a label so we can target this windows template in manual (replay) tests

--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -133,7 +133,7 @@ controller:
                     instanceCapStr: "5"
                     containers:
                       - name: jnlp
-                        image: "jenkins/inbound-agent:windowsservercore-1809"
+                        image: "jenkinsciinfra/inbound-agent:windowsservercore-1809"
                         command: "powershell"
                         args: "Start-Sleep 999999"
                         resourceLimitCpu: "500m"
@@ -143,6 +143,7 @@ controller:
                         alwaysPullImage: true
                         workingDir: "C:\\Users\\jenkins"
                     yamlMergeStrategy: "merge"
+                    label: "windows-2019-kubernetes"
                     yaml: |-
                       spec:
                         tolerations:
