feat: enable timestamper on all pipelines
Fixes https://github.com/jenkins-infra/helpdesk/issues/2990

--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -339,6 +339,10 @@ controller:
                 - "GROUP:Overall/Administer:jenkins-admins"
                 - "GROUP:Overall/Read:authenticated"
                 - "GROUP:Overall/SystemRead:authenticated"
+      timestamper-settings: |
+        unclassified:
+          timestamper:
+            allPipelines: true
       system-settings: |
         unclassified:
           defaultFolderConfiguration:
