hotfix(ldap,mirrorbits) specify secretNamespace for PVs using azurefile - https://github.com/Azure/AKS/issues/2871
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/config/mirrorbits.yaml
+++ b/config/mirrorbits.yaml
@@ -73,6 +73,7 @@ repository:
         - ReadWriteMany
       azureFile:
         secretName: mirrorbits-binary
+        secretNamespace: mirrorbits
         shareName: mirrorbits
         readOnly: true
       mountOptions:
