hotfix(javadoc/jenkins.io/plugin-site/reports): specify secretNamespace
Ref: https://github.com/jenkins-infra/helpdesk/issues/3037

--- a/config/javadoc.yaml
+++ b/config/javadoc.yaml
@@ -27,5 +27,6 @@ resources:
 htmlVolume:
   azureFile:
     secretName: javadoc
+    secretNamespace: javadoc
     shareName: javadoc
     readOnly: true
