--- a/config/jenkinsio.yaml
+++ b/config/jenkinsio.yaml
@@ -57,11 +57,13 @@ resources:
 htmlVolume:
   azureFile:
     secretName: jenkinsio
+    secretNamespace: jenkinsio
     shareName: jenkinsio
     readOnly: true
 zhHtmlVolume:
   azureFile:
     secretName: jenkinsio
+    secretNamespace: jenkinsio
     shareName: zhjenkinsio
     readOnly: true
 forceJenkinsIoHost: true
