--- a/config/reports.yaml
+++ b/config/reports.yaml
@@ -27,5 +27,6 @@ resources:
 htmlVolume:
   azureFile:
     secretName: reports
+    secretNamespace: reports
     shareName: reports
     readOnly: true
